--- a/mysql/config/config.json
+++ b/mysql/config/config.json
@@ -1,1 +1,1 @@
-{"user":"root","host":"127.0.0.1","password":"password"}
+{"user":"root","host":"127.0.0.1","password":"password","database":"rest"}
